# memrec

./: .gitignore  .opencode_id  AGENTS.md  BGE_M3_SETUP.md  CHANGELOG.md  CHANGELOG_cn.md  Cargo.toml  LICENSE  MANUAL.md  MANUAL_cn.md  MODEL_ABSTRACTION_COMPLETE.md  MODEL_SWITCH_PLAN.md  README.md  README_cn.md  README_en.md  SECURITY_ANALYSIS.md  SECURITY_HIGHLIGHTS.md  SECURITY_SUMMARY.md  install.sh
common/: Cargo.toml  README.md  README_cn.md
common/src/: lib.rs
common/src/protocol/: error.rs  mod.rs  request.rs  response.rs
common/src/types/: config.rs  memory.rs  mod.rs  model.rs  project.rs
docs/: 20260716-memory-todo.md  installation.md  systemd.md  todo.md  user-guide.md
docs/skills/: memrec-skill-phase6.md  memrec-skill.md
docs/superpowers/plans/: 2026-04-23-memrec-phase1-infrastructure.md  2026-04-23-memrec-phase2-storage.md  2026-04-23-memrec-phase3-server.md  2026-04-23-memrec-phase4-cli.md  2026-04-23-memrec-phase5-advanced.md  2026-04-23-memrec-phase6-implementation.md  2026-07-16-search-enhancement-plan.md
docs/superpowers/specs/: 2026-04-23-memrec-algorithms.md  2026-04-23-memrec-design.md  2026-04-23-memrec-phase6-design.md  2026-07-16-search-enhancement-design.md
memrec/: Cargo.toml  README.md  README_cn.md
memrec/src/: main.rs
memrec/src/client/: connection.rs  mod.rs
memrec/src/commands/: memory.rs  mod.rs  search.rs
memrec/src/mcp/: mod.rs
memrecd/: Cargo.toml  README.md  README_cn.md
memrecd/src/: config.rs  lib.rs  main.rs
memrecd/src/daemon/: mod.rs
memrecd/src/embedding/: bge_m3.rs  fastembed.rs  mod.rs
memrecd/src/importance/: calculator.rs  mod.rs
memrecd/src/lifecycle/: manager.rs  mod.rs
memrecd/src/project/: detect.rs  mod.rs
memrecd/src/search/: mmr.rs  mod.rs  scorer.rs
memrecd/src/server/: handler.rs  mod.rs  unix_socket.rs
memrecd/src/storage/: hybrid_store.rs  memory_store.rs  mod.rs  persistent_vector_store.rs  qdrant.rs  rocksdb.rs  rocksdb_vector.rs  tantivy_store.rs  traits.rs  vector_store.rs
memrecd/tests/: hybrid_search_integration.rs
mr-install/: Cargo.toml  README.md  README_cn.md
mr-install/src/: config.rs  dirs.rs  download.rs  install.rs  launchd.rs  lib.rs  main.rs  service.rs  systemd.rs  verify.rs  windows_service.rs
scripts/: memrecctl.sh  restart.sh  start.sh  status.sh  stop.sh
scripts/systemd/: install.sh  memrecd.service  status.sh  uninstall.sh
skills/memrec/: SKILL.md
