[workspace]
members = ["common", "memrecd", "memrec"]
resolver = "2"

[workspace.package]
version = "0.3.0-dev" # managed by updgitver
edition = "2021"
authors = ["MemRec Team"]
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"

fastembed = { version = "5", features = ["hf-hub"] }
