[package]
name = "memrec-common"
version = "0.4.0" # managed by updgitver
edition = "2021"
authors = ["Helly Guo <hellyguo@foxmail.com>"]
homepage = "https://itcraft.cn/memrec/"
repository = "https://github.com/itcraft-cn/memrec"
license = "Apache-2.0"
readme = "README.md"
description = "Local-first AI memory with project isolation — for terminal, for private use"
categories = ["command-line-utilities"]
documentation = "https://docs.rs/crate/memrec/latest"
keywords = ["Local", "Isolation", "Memory"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true