[package]
name = "memrec"
version = "0.2.0" # managed by updgitver
edition = "2021"

[[bin]]
name = "memrec"
path = "src/main.rs"

[dependencies]
memrec-common = { path = "../common" }
anyhow.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "color"] }
dirs = "5"