[package]
name = "memrec"
version = "0.3.0-dev" # managed by updgitver
edition = "2021"
authors = ["Helly Guo <hellyguo@foxmail.com>"]
homepage = "https://itcraft.cn/memrec/"
repository = "https://github.com/itcraft-cn/memrec"
license = "Apache-2.0"
readme = "README.md"
description = "Local-first AI memory with project isolation — for terminal, for private use"
categories = ["command-line-utilities"]
documentation = "https://docs.rs/crate/memrec/latest"
keywords = ["Local", "Isolation", "Memory"]

[[bin]]
name = "memrec"
path = "src/main.rs"

[dependencies]
memrec-common = { path = "../common", version = "0.3.0-dev" } # managed by updgitver
anyhow.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "color"] }
dirs = "5"