[package]
name = "memrecd"
version = "0.2.0" # managed by updgitver
edition = "2021"

[[bin]]
name = "memrecd"
path = "src/main.rs"

[lib]
name = "memrecd"
path = "src/lib.rs"

[dependencies]
memrec-common = { path = "../common" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio = { version = "1", features = ["full"] }
rocksdb = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
dirs = "5"

fastembed.workspace = true

[dev-dependencies]
tempfile = "3"