[package]
name = "memrecd"
version = "0.3.0-dev" # managed by updgitver
edition = "2021"
authors = ["Helly Guo <hellyguo@foxmail.com>"]
homepage = "https://itcraft.cn/memrec/"
repository = "https://github.com/itcraft-cn/memrec"
license = "Apache-2.0"
readme = "README.md"
description = "Local-first AI memory with project isolation — for terminal, for private use"
categories = ["command-line-utilities"]
documentation = "https://docs.rs/crate/memrec/latest"
keywords = ["Local", "Isolation", "Memory"]

[[bin]]
name = "memrecd"
path = "src/main.rs"

[lib]
name = "memrecd"
path = "src/lib.rs"

[dependencies]
memrec-common = { path = "../common", version = "0.3.0-dev" } # managed by updgitver
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio = { version = "1", features = ["full"] }
rocksdb = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
dirs = "5"

fastembed.workspace = true
toml = "0.8"

[dev-dependencies]
tempfile = "3"