[package]
name = "mr-install"
version = "0.5.0-dev" # managed by updgitver
edition = "2021"
authors = ["Helly Guo <hellyguo@foxmail.com>"]
homepage = "https://itcraft.cn/memrec/"
repository = "https://github.com/itcraft-cn/memrec"
license = "Apache-2.0"
readme = "README.md"
description = "Installer for MemRec — Local-first AI memory with project isolation"
categories = ["command-line-utilities"]
documentation = "https://docs.rs/crate/memrec/latest"
keywords = ["Local", "Isolation", "Memory"]

[[bin]]
name = "mr-install"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "color"] }
dirs = "5"
toml = "0.8"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
chrono.workspace = true
sha2 = "0.10"
hex = "0.4"
memrec-common = { path = "../common", version = "0.5.0-dev" } #managed by updgitver

[dev-dependencies]
tempfile = "3"
